--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,15 @@ select {
   top: calc(50vh - 25px);
   left: calc(50vw - 25px);
   z-index: 101;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @-webkit-keyframes bounceIn {
