--- a/css/styles.scss
+++ b/css/styles.scss
@@ -75,54 +75,10 @@ select {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
   }
-  @-webkit-keyframes bounceIn {
-    0%,
-    20%,
-    40%,
-    60%,
-    80%,
-    100% {
-      -webkit-transition-timing-function: cubic-bezier(
-        0.215,
-        0.61,
-        0.355,
-        1
-      );
-      transition-timing-function: cubic-bezier(
-        0.215,
-        0.61,
-        0.355,
-        1
-      );
-    }
-    0% {
-      opacity: 1;
-      -webkit-transform: scale3d(0.3, 0.3, 0.3);
-      transform: scale3d(0.3, 0.3, 0.3);
-    }
-    20% {
-      -webkit-transform: scale3d(1.1, 1.1, 1.1);
-      transform: scale3d(1.1, 1.1, 1.1);
-    }
-    40% {
-      -webkit-transform: scale3d(0.9, 0.9, 0.9);
-      transform: scale3d(0.9, 0.9, 0.9);
-    }
-    60% {
-      -webkit-transform: scale3d(1.03, 1.03, 1.03);
-      transform: scale3d(1.03, 1.03, 1.03);
-    }
-    80% {
-      -webkit-transform: scale3d(0.97, 0.97, 0.97);
-      transform: scale3d(0.97, 0.97, 0.97);
-    }
-    100% {
-      opacity: 0;
-      -webkit-transform: scale3d(1, 1, 1);
-      transform: scale3d(1, 1, 1);
-    }
-  }
+  
+  
   @keyframes bounceIn {
     0%,
     20%,
@@ -164,7 +120,7 @@ select {
     80% {
       -webkit-transform: scale3d(0.97, 0.97, 0.97);
       transform: scale3d(0.97, 0.97, 0.97);
-      opacity: 1;
+      opacity: 0;
     }
     100% {
       opacity: 0;
